# fastapi-vue-test

./: .gitignore  docker-compose.yaml
services/backend/: Dockerfile  pyproject.toml
services/backend/alembic/: env.py
services/backend/alembic/versions/: 125218bea47b_fk.py  32bb221e8be1_initv1.py  6d50f321fab9_init.py  9cfd8a4e4b12_suka.py
services/backend/src/: main.py
services/backend/src/constants/: note.py  user.py
services/backend/src/db/: base.py  connection.py
services/backend/src/dependecies/: database.py
services/backend/src/models/: note.py  user.py
services/backend/src/repository/: base.py  note.py  user.py
services/backend/src/routes/: auth.py  note.py  user.py
services/backend/src/schemas/: auth.py  note.py  user.py
services/backend/src/services/auth/: hash.py  token.py
services/frontend/: package-lock.json
services/frontend/src/: main.js
services/frontend/src/components/: HelloWorld.vue
